--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <html>
   <head>
-    <h2>Hello, World.</h2>  
+    <img src="download.png" alt="Banner" width="900" height="300">
   </head>
 </html>
