--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
   <head>
-    <img src="download.png" alt="Banner" width="900" height="300">
+    <img src="download.png" alt="Banner" width="1000" height="300">
+      <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
+      <h2>Student URN: 6927488</h2>
   </head>
 </html>
