--- a/index.html
+++ b/index.html
@@ -8,5 +8,31 @@
     <hr>
     <h2 style="font-family:calibri;"><b>Conference Paper: Bridge Deck Repairs</b></h2>
     <hr>
+
+    <!style for tables>
+      <style>
+        table {
+          font-family: arial, sans-serif;
+          border-collapse: collapse;
+          width: 30%;
+        }
+
+        td, th {
+          border: 1px solid #dddddd;
+          text-align: left;
+          padding: 8px;
+        }
+
+        tr:nth-child(even) {
+          background-color: #dddddd;
+        }
+
+        <style>
+        p.ex1 {
+          margin-left: 250px;
+        }
+      
+      </style>
+    </style>
   </head>
 </html>
