--- a/index.html
+++ b/index.html
@@ -1,53 +1,42 @@
 <!DOCTYPE html>
-
 <html>
   <head>
-    <img src="download.png" alt="Banner" width="1200" height="300">
-      <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
-      <h2>Student URN: 6927488</h2>
-    <hr>
-    <h2 style="font-family:calibri;"><b>Conference Paper: Bridge Deck Repairs</b></h2>
-    <hr>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ENG0018 Computer Laboratory 2025/26</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!style for tables>
-      <style>
-        table {
-          font-family: arial, sans-serif;
-          border-collapse: collapse;
-          width: 30%;
-        }
-
-        td, th {
-          border: 1px solid #dddddd;
-          text-align: left;
-          padding: 8px;
-        }
-
-        tr:nth-child(even) {
-          background-color: #dddddd;
-        }
-
-        <style>
-        p.ex1 {
-          margin-left: 250px;
-        }
-      
-      </style>
+    <style>
+      table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 30%;
+      }
+      td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+      }
+      tr:nth-child(even) {
+        background-color: #dddddd;
+      }
+      p.ex1 {
+        margin-left: 250px;
+      }
+      .mySlides {
+        display: none;
+      }
     </style>
   </head>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <style>
-    .mySlides {display:none;}
-  </style>
-
-  <body style="background-color:#FFFFFF;margin-left:50px;">
-
+  <body style="background-color:#FFFFFF; margin-left:50px;">
+    <img src="download.png" alt="Banner" width="1200" height="300">
+    <h1>ENG0018 Computer Laboratory 2025/26</h1>
+    <h2>Student URN: 6927488</h2>
+    <hr>
+    <h2 style="font-family:calibri;">Conference Paper: Bridge Deck Repairs</h2>
+    <hr>
     <h3 id="Abstract">Abstract</h3>
     <p class="ex1">
-      <pre>
-        Test
-      </pre>
+      Test
     </p>
+  </body>
 </html>
