--- a/index.html
+++ b/index.html
@@ -57,5 +57,53 @@ reaching a stage where information from the selected instances is contrary to th
 classifier confidence to drop, as in Vlachos (2008 
     </p>
     <h3 id=”Analysis and discussion”>Analysis and Discussion</h3>
+
+    <!table of contents>
+    <table>
+      <tr>
+        <th><h3>Table of Contents</h3></th>
+      </tr>
+      <tr>
+        <td><a href="#Abstract">Abstract</td>
+      </tr>
+      <tr>
+        <td><a href="#Introduction">Introducion</td>
+      </tr>
+      <tr>
+        <td><a href="#Analysis and discussion">Analysis and Discussion</td>
+      </tr>
+
+      <tr>
+        <td><a href="#References">References</td>
+      </tr>
+    </table>
+
+    <!table 1>
+    <table>
+      <tr>
+        <th>£ Cost of Repairs</th>
+        <th>Lifespan of Repairs (Years)</th>
+      </tr>
+      <tr>
+        <td>0.7m</td>
+        <td>2</td>
+      </tr>
+      <tr>
+        <td>3.3m</td>
+        <td>4</td>
+      </tr>
+      <tr>
+        <td>2.6m</td>
+        <td>5</td>
+      </tr>
+      <tr>
+        <td>17.4m</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <td>8.8m</td>
+        <td>9</td>
+      </tr>
+    </table>
   </body>
 </html>
