--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ reaching a stage where information from the selected instances is contrary to th
 classifier confidence to drop, as in Vlachos (2008 
     </p>
     <h3 id=”Analysis and discussion”>Analysis and Discussion</h3>
-
-    <!table 1>
+    Bridge deck repair durability is the subject of much recent research such as in <a href=”https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034”>Toshihiko et al (2023).</a>
+    Table 1: Data on Cost and Lifespan of Bridge Repairs
     <table>
       <tr>
         <th>£ Cost of Repairs</th>
@@ -107,5 +107,7 @@ classifier confidence to drop, as in Vlachos (2008
         <td>9</td>
       </tr>
     </table>
+
+    
   </body>
 </html>
