Fix typo in anchor and heading IDs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <td><a href="#Introduction">Introducion</td>
       </tr>
       <tr>
-        <td><a href="#Analysis-discussion">Analysis and Discussion</td>
+        <td><a href="#Analysis-Discussion">Analysis and Discussion</td>
       </tr>
       <tr>
         <td><a href="#References">References</td>
@@ -75,7 +75,7 @@ learning at each epoch. The process is continued until some stopping criterion h
 reaching a stage where information from the selected instances is contrary to the model, causing the
 classifier confidence to drop, as in Vlachos (2008).
     <br>
-    <h3 id=”Analysis-discussion”>Analysis and Discussion</h3>
+    <h3 id="Analysis-Discussion">Analysis and Discussion</h3>
     Bridge deck repair durability is the subject of much recent research such as in <a href=”https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034”>Toshihiko et al (2023).</a>
     Table 1: Data on Cost and Lifespan of Bridge Repairs
     <table>
