Add indentation class for improved text formatting

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       .mySlides {
         display: none;
       }
+      .indent {
+        margin-left: 250px;
+        white-space: normal;
+      }    
     </style>
   </head>
   <body style="background-color:#FFFFFF; margin-left:50px;">
@@ -63,7 +67,7 @@
     </table>
     <hr>
     <h3 id="Abstract">Abstract</h3>
-    <p class="ex1">
+    <p class="indent">
       <pre>
 Antimatter is the opposite of matter and should have been created in equal amounts at the Big Bang. Yet almost no antimatter exists in the universe today, leaving behind one of physics’ biggest unanswered questions: why did matter survive while antimatter disappeared? 
 This article explores this imbalance, looking at what might have happened to antimatter and what this mystery reveals about the early universe. We discuss current theories and experiments, including studies on symmetry violations, antimatter production, and the challenges of storing it. Research so far has found small differences between matter and antimatter, but not enough to explain why our universe is made of matter. 
@@ -71,9 +75,9 @@ Understanding this problem could reshape ideas about how the universe formed and
       </pre>
     </p>
     <h3 id="Introduction">Introduction</h3>
-    <p class="ex1">
+    <p class="indent">
       <pre>
-        Antimatter is the opposite of the matter that makes up everything around us, with each particle such as the electron having an antiparticle counterpart of equal mass but opposite charge and properties. When matter and antimatter meet, they annihilate one another and release energy. Although first predicted in the early 20th century and later confirmed through particle physics experiments and cosmic observations, antimatter remains almost entirely absent in everyday life. This absence is puzzling because the Big Bang should have created equal amounts of matter and antimatter, meaning both should have annihilated and left behind only energy. Instead, our universe exists, implying a fundamental imbalance in nature that is not yet understood. This paper explores what antimatter is, why it is expected to exist in equal quantity to matter, and why it appears missing today. To do so, it examines current scientific theories and experimental findings on matter–antimatter behaviour, including symmetry violations, creation methods, and containment challenges, in order to understand the efforts being made to solve this major question in physics and what it can reveal about the origins of the universe.
+Antimatter is the opposite of the matter that makes up everything around us, with each particle such as the electron having an antiparticle counterpart of equal mass but opposite charge and properties. When matter and antimatter meet, they annihilate one another and release energy. Although first predicted in the early 20th century and later confirmed through particle physics experiments and cosmic observations, antimatter remains almost entirely absent in everyday life. This absence is puzzling because the Big Bang should have created equal amounts of matter and antimatter, meaning both should have annihilated and left behind only energy. Instead, our universe exists, implying a fundamental imbalance in nature that is not yet understood. This paper explores what antimatter is, why it is expected to exist in equal quantity to matter, and why it appears missing today. To do so, it examines current scientific theories and experimental findings on matter–antimatter behaviour, including symmetry violations, creation methods, and containment challenges, in order to understand the efforts being made to solve this major question in physics and what it can reveal about the origins of the universe.
       </pre> 
     </p>
 
@@ -109,7 +113,7 @@ Understanding this problem could reshape ideas about how the universe formed and
     </table>
     -->
     <h3 id="Unequal-Amount">Why Is There an Unequal Amount?</h3>
-    <p class="ex1">
+    <p class="indent">
       <pre>
 According to scientific theory, the Big Bang should have created equal parts of matter and antimatter. If that were true, most particles would have annihilated with their partners, leaving behind nothing but energy. We exist, stars shine, and galaxies formed but antimatter appears to be missing. 
 This imbalance is called the matter–antimatter asymmetry problem. Scientists have found tiny hints that the laws of physics treat matter and antimatter slightly differently. According to CERN, the small differences discovered so far “are not enough to explain the imbalance observed in the universe”. 
@@ -117,7 +121,7 @@ In simple terms, the universe seems biased toward matter. Why this bias exists r
       </pre>
     </p>
     <h3 id="What-And-What">What Does It Tell Us and What Can We Do with It?</h3>
-    <p class="ex1">
+    <p class="indent">
       <pre>
 Understanding antimatter helps scientists test the foundations of physics; gravity, quantum forces, and even time symmetry. If antimatter behaves differently from matter in subtle ways, those differences could rewrite parts of physics. 
 On a practical level, antimatter has real uses. Medical facilities use positrons in PET scans to observe detailed activity inside the human body. Researchers are also studying antimatter for potential propulsion systems. The energy released when matter and antimatter meet is enormous, far greater than nuclear fusion or chemical fuel. The U.S. Department of Energy notes that antimatter annihilation releases “vast amounts of energy,” making it a potential tool for future spacecraft. In theory, only a small amount of antimatter could power missions beyond our solar system. 
@@ -125,7 +129,7 @@ Of course, this is still more science fiction than reality, but it's based in re
       </pre>
     </p>
     <h3 id="How-And-Why">How Can We Synthesise/Create It and Why Is It So Hard To?</h3>
-    <p class="ex1">
+    <p class="indent">
       <pre>
 Even though antimatter is rare in the universe, scientists can create it, just in extremely tiny amounts. Particle accelerators like the ones at CERN collide particles together at high speed. These collisions can briefly form antiparticles. But producing antimatter is incredibly energy-intensive and inefficient - see Figure 1 for a reference of the energy required for a proton-antiproton annihilation. As one physics study explains, creating even small quantities requires huge amounts of energy and specialized magnetic containment tools to prevent annihilation. 
 The difficulty doesn’t stop after creation. Antimatter cannot touch regular matter, including the walls of a container, or it will instantly annihilate. That means scientists must trap antimatter using magnetic fields. Even then, they have only managed to hold small numbers of antiparticles for short periods of time. 
@@ -133,7 +137,7 @@ To give an idea of rarity, the total antimatter created by humans so far is only
       </pre> 
     </p>
     <h3 id="Conclusion">Conclusion</h3>
-    <p class="ex1">
+    <p class="indent">
       <pre>
 By examining current theories, experiments, and challenges in antimatter research, we aimed to understand what may have happened to antimatter after the Big Bang and what this mystery tells us about the origins of the universe. 
 Evidence reviewed shows that scientists have detected small differences between matter and antimatter, but these findings do not yet fully explain the imbalance that allowed matter, and life, to exist. Continued research into symmetry violations, antimatter production, and containment remains essential, as each new result brings us closer to understanding this abnormal asymmetry. 
