Add hyperlinks to references in index.html

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@ Beyond addressing the main question, studying this topic highlights how much rem
     <br>
     <h3 id="References">References</h3>
     <p class="indent">
-CERN (n.d.) Matter–antimatter asymmetry problem. Available at: https://home.cern/science/physics/matter-antimatter-asymmetry-problem (Accessed: 29 October 2025). 
+CERN (n.d.) Matter–antimatter asymmetry problem. Available at: <a href="https://home.cern/science/physics/matter-antimatter-asymmetry-problem">https://home.cern/science/physics/matter-antimatter-asymmetry-problem (Accessed: 29 October 2025)</a>. 
 
-U.S. Department of Energy, Office of Science (n.d.) DOE explains… antimatter. Available at: https://www.energy.gov/science/doe-explainsantimatter (Accessed: 29 October 2025). 
+U.S. Department of Energy, Office of Science (n.d.) DOE explains… antimatter. Available at: <a href="https://www.energy.gov/science/doe-explainsantimatter">https://www.energy.gov/science/doe-explainsantimatter (Accessed: 29 October 2025)</a>.
 
-Afnan, M., Smith, J., Chen, L. and Patel, R. (2022) ‘Practical use of antimatter’, Journal of Physics: Conference Series, 2386(1). Available at: https://iopscience.iop.org/article/10.1088/1742-6596/2386/1/012074/pdf (Accessed: 29 October 2025). 
+Afnan, M., Smith, J., Chen, L. and Patel, R. (2022) ‘Practical use of antimatter’, Journal of Physics: Conference Series, 2386(1). Available at: <a href="https://iopscience.iop.org/article/10.1088/1742-6596/2386/1/012074/pdf">https://iopscience.iop.org/article/10.1088/1742-6596/2386/1/012074/pdf (Accessed: 29 October 2025)</a>. 
 
-University College London (2022) What happens when matter and antimatter collide? UCL Culture Online, 10 March. Available at: https://www.ucl.ac.uk/culture-online/case-studies/2022/mar/what-happens-when-matter-and-antimatter-collide (Accessed: 29 October 2025).
+University College London (2022) What happens when matter and antimatter collide? UCL Culture Online, 10 March. Available at: <a href="https://www.ucl.ac.uk/culture-online/case-studies/2022/mar/what-happens-when-matter-and-antimatter-collide">https://www.ucl.ac.uk/culture-online/case-studies/2022/mar/what-happens-when-matter-and-antimatter-collide (Accessed: 29 October 2025)</a>.
     </p>
 </html>
