Revise antimatter section for clarity and detail
Updated the explanation of matter-antimatter asymmetry and added recent experimental findings.

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ Antimatter is the opposite of the matter that makes up everything around us, wit
     </p>
     <h3 id="Unequal-Amount">Why Is There an Unequal Amount?</h3>
     <p class="indent">
-According to scientific theory, the Big Bang should have created equal parts of matter and antimatter. If that were true, most particles would have annihilated with their partners, leaving behind nothing but energy. We exist, stars shine, and galaxies formed but antimatter appears to be missing. 
-This imbalance is called the matter–antimatter asymmetry problem. Scientists have found tiny hints that the laws of physics treat matter and antimatter slightly differently. According to CERN, the small differences discovered so far “are not enough to explain the imbalance observed in the universe”. 
-In simple terms, the universe seems biased toward matter. Why this bias exists remains unknown. Many theories try to explain it. Some propose undiscovered particles., others suggest different phases in the early universe gave matter an advantage. Solving this puzzle would answer one of the biggest questions we can ask: Why is there something rather than nothing? 
+If matter and antimatter were created equally, they should have destroyed each other completely. Instead, a tiny imbalance, roughly one extra matter particle per 1,000,000,000, allowed all matter to survive. This problem is known as the matter–antimatter asymmetry. 
+Scientists have observed subtle differences between matter and antimatter. For example, a recent experiment at CERN showed that a matter particle and its antimatter twin decayed at different rates by about 2.5%, with a significance of 5.2 sigma (roughly a 1-in-10-million chance the result is random).  
+This is an important clue, but still not enough to explain the scale of the imbalance. In simple terms, the universe seems biased toward matter, and we don’t yet know why. 
     </p>
     <h3 id="What-And-What">What Does It Tell Us and What Can We Do with It?</h3>
     <p class="indent">
