--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>ENG0018 Computer Laboratory 2025/26</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     
-    <-- <!Style for Tables>
+    <!-- STYLE FOR TABLES -->
     <style>
       table {
         font-family: arial, sans-serif;
@@ -41,7 +41,7 @@
   <h2 style="font-family:calibri;">Conference Paper: Antimatter's Missing Half: The Key to How Our Universe Was Made </h2>
   <hr>
 
-  <-- <!Table of contents>
+  <!-- TABLE OF CONTENTS -->
   <table>
     <tr><th><h3>Table of Contents</h3></th></tr>
     <tr><td><a href="#Abstract">Abstract</a></td></tr>
@@ -87,11 +87,12 @@
   <br>
   <h3 id="References">References</h3>
   <p class="indent">
-  CERN (no date) <i>Matter–antimatter asymmetry problem</i>. Available at: <a href="https://home.cern/science/physics/matter-antimatter-asymmetry-problem"> https://home.cern/science/physics/matter-antimatter-asymmetry-problem</a> (Accessed: 29 October 2025).<br><br>
-  U.S. Department of Energy, Office of Science (no date) <i>DOE explains… antimatter</i>. Available at: <a href="https://www.energy.gov/science/doe-explainsantimatter"> https://www.energy.gov/science/doe-explainsantimatter</a> (Accessed: 29 October 2025).<br><br>
-  Afnan, M., Smith, J., Chen, L. and Patel, R. (2022) ‘Practical use of antimatter’, <i>Journal of Physics: Conference Series</i>, 2386(1). Available at: <a href="https://iopscience.iop.org/article/10.1088/1742-6596/2386/1/012074/pdf"> https://iopscience.iop.org/article/10.1088/1742-6596/2386/1/012074/pdf</a> (Accessed: 29 October 2025).<br><br>
-  University College London (2022) <i>What happens when matter and antimatter collide?</i> UCL Culture Online, 10 March. Available at: <a href="https://www.ucl.ac.uk/culture-online/case-studies/2022/mar/what-happens-when-matter-and-antimatter-collide"> https://www.ucl.ac.uk/culture-online/case-studies/2022/mar/what-happens-when-matter-and-antimatter-collide</a> (Accessed: 29 October 2025).
+CERN (no date) <i>Matter–antimatter asymmetry problem</i>. Available at: <a href="https://home.cern/science/physics/matter-antimatter-asymmetry-problem"> https://home.cern/science/physics/matter-antimatter-asymmetry-problem</a> (Accessed: 29 October 2025).<br>
+U.S. Department of Energy, Office of Science (no date) <i>DOE explains… antimatter</i>. Available at: <a href="https://www.energy.gov/science/doe-explainsantimatter"> https://www.energy.gov/science/doe-explainsantimatter</a> (Accessed: 29 October 2025).<br>
+Afnan, M., Smith, J., Chen, L. and Patel, R. (2022) ‘Practical use of antimatter’, <i>Journal of Physics: Conference Series</i>, 2386(1). Available at: <a href="https://iopscience.iop.org/article/10.1088/1742-6596/2386/1/012074/pdf"> https://iopscience.iop.org/article/10.1088/1742-6596/2386/1/012074/pdf</a> (Accessed: 29 October 2025).<br>
+University College London (2022) <i>What happens when matter and antimatter collide?</i> UCL Culture Online, 10 March. Available at: <a href="https://www.ucl.ac.uk/culture-online/case-studies/2022/mar/what-happens-when-matter-and-antimatter-collide"> https://www.ucl.ac.uk/culture-online/case-studies/2022/mar/what-happens-when-matter-and-antimatter-collide</a> (Accessed: 29 October 2025).
   </p>
+
 
 
   <!-- Word Count + Last Modified Display -->
